search function...not working
illegal state exception, Games.java line 101

--- a/app/views/games/AllGames.scala.html
+++ b/app/views/games/AllGames.scala.html
@@ -1,9 +1,59 @@
-@(title: String, games: List[models.games.Game])
+@(title: String, games: List[models.games.Game], gameForm: Form[views.formdata.games.GameForm])
+
+@import helper._
+@import bootstrap3._
+
+<style>
+
+.form-inline {
+    font-size: 0px;
+    padding: 0px;
+    margin-right: 0px;
+}
+.form-inline .form-group {
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    height: 36px;
+}
 
 
+.form-inline .btn {
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-left: 0px;
+    height: 36px;
+    margin-bottom: 3px;
+    margin-left: 0px;
+    margin-top: 4px;
+}
+
+
+</style>
 
 @Main(title) {
     <a href="@routes.Games.createGame()" class="btn btn-primary btn-md active" role="button">Create a Game</a>
+    </br>
+    <hr>
+    <div class="search">
+        @form(routes.Games.searchResults(), 'class -> "form-inline") {
+            @bootstrap3.text(gameForm("search"),
+                placeholder="Search by Name",
+                label = "",
+                help = "")
+                <!-- 
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button id="submitButton" type="submit" class="btn btn-primary">
+                Search
+                </button>
+            </div>
+        </div>
+        -->
+        <button type="submit" class="btn btn-default glyphicon glyphicon-search"></button>
+        }
+    
+    </div>
+    
     <table class="table table-striped table-hover">
       <thead>
          <tr>
