--- a/app/views/player/PlayerForm.scala.html
+++ b/app/views/player/PlayerForm.scala.html
@@ -52,6 +52,11 @@
         placeholder = "About yourself",
         help = "Tell us a little about yourself. Please!")
         
+    @text(playerForm("lookingFor"),
+        label = "Looking For",
+        placeholder = "Pickup Games",
+        help = "What are you looking for?")
+        
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
         <button id="submitButton" type="submit" class="btn btn-info">
