--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -90,12 +90,17 @@ h101 {
     margin-right: 6px;
 }
 
-#Pics {
+#bio {
     margin: auto;
     margin-left:auto;
     margin-right:auto;
-    width: 400px;
-    height: 300px
+}
+
+.tab-pane-carousel {
+    margin-left:auto;
+    margin-right:auto;
+    height: 350px;
+    width: 450px;
 }
 
 span:hover{
