--- a/app/views/player/PlayerForm.scala.html
+++ b/app/views/player/PlayerForm.scala.html
@@ -11,13 +11,18 @@
     
     @text(playerForm("name"),
         label = "Name",
-        placeholder = "Name",
+        placeholder = "Brick Tamland",
         help = "Your name.")
         
     @text(playerForm("nickname"),
         label = "Nickname",
-        placeholder = "Nickname",
+        placeholder = "Brick",
         help = "Your nickname.")
+        
+    @text(playerForm("picUrl"),
+        label = "PicUrl",
+        placeholder = "http://www.example.com/picture",
+        help = "Url of your profile pic.")
   
     @text(playerForm("homeCourt"),
         label = "Home Court",
@@ -38,18 +43,18 @@
         
     @text(playerForm("height"),
         label = "Height",
-        placeholder = "Height",
+        placeholder = "5'9\"",
         help = "Your height.")
         
     @text(playerForm("weight"),
         label = "Weight",
-        placeholder = "Weight",
+        placeholder = "210 lbs",
         help = "Your weight.")
         
     @bootstrap3.textarea(playerForm("bio"),
         rows = "10",
         label = "Bio",
-        placeholder = "About yourself",
+        placeholder = "I'm Brick Tamland. People seem to like me because I am polite and I am rarely late. I like to eat ice cream and I really enjoy a nice pair of slacks. Years later, a doctor will tell me that I have an I.Q. of 48 and am what some people call mentally retarded. I love lamp.",
         help = "Tell us a little about yourself. Please!")
         
     @text(playerForm("lookingFor"),
