--- a/app/views/bootstrap3/selectDate.scala.html
+++ b/app/views/bootstrap3/selectDate.scala.html
@@ -3,7 +3,7 @@
 
   <div class="form-group @if(field.hasErrors) {has-error}">
     <label class="col-sm-2 control-label" for="@field.id">@label</label>
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <select
         class="form-control"
         id="@field.id"
@@ -17,8 +17,7 @@
       <span class="help-block">@help</span>
       <span class="help-block">@{field.error.map { error => error.message }}</span>
     </div>
-    <label class="col-sm-2 control-label" for="@field2.id">@label2</label>
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <select
         class="form-control"
         id="@field2.id"
@@ -32,5 +31,5 @@
       <span class="help-block">@help2</span>
       <span class="help-block">@{field2.error.map { error => error.message }}</span>
     </div>
-    
+    <div class="col-sm-4"></div>
   </div>
