--- a/app/views/games/AllGames.scala.html
+++ b/app/views/games/AllGames.scala.html
@@ -1,4 +1,4 @@
-@(title: String, games: List[models.games.Game], gameForm: Form[views.formdata.games.GameForm])
+@(title: String, games: List[models.games.Game], searchForm: Form[views.formdata.games.SearchSortGames])
 
 @import helper._
 @import bootstrap3._
@@ -11,16 +11,12 @@
     margin-right: 0px;
 }
 .form-inline .form-group {
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;
     height: 36px;
+    padding: 0px;
 }
 
 
 .form-inline .btn {
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
-    border-left: 0px;
     height: 36px;
     margin-bottom: 3px;
     margin-left: 0px;
@@ -32,26 +28,28 @@
 
 @Main(title) {
     <a href="@routes.Games.createGame()" class="btn btn-primary btn-md active" role="button">Create a Game</a>
+    
+    
     </br>
     <hr>
-    <div class="search">
+   
         @form(routes.Games.searchResults(), 'class -> "form-inline") {
-            @bootstrap3.text(gameForm("search"),
-                placeholder="Search by Name",
+            @bootstrap3.text(searchForm("search"),
+                placeholder="Search by Name or Location",
                 label = "",
                 help = "")
-                <!-- 
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <button id="submitButton" type="submit" class="btn btn-primary">
-                Search
-                </button>
-            </div>
-        </div>
-        -->
-        <button type="submit" class="btn btn-default glyphicon glyphicon-search"></button>
+        <button type="submit" class="btn btn-primary glyphicon glyphicon-search"></button>
         }
     
+    
+    <div class="btn-group pull-right">
+        <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown">
+        Sort By<span class="caret"></span>     
+        </button>
+        <ul class="dropdown-menu" role="menu">
+            <li><a href="@routes.Games.sortByLocation()">Location</a></li>
+            <li><a href="@routes.Games.sortBySkillLevel()">Skill Level</a></li>       
+        </ul>
     </div>
     
     <table class="table table-striped table-hover">
