--- a/app/views/teams/CreateTeam.scala.html
+++ b/app/views/teams/CreateTeam.scala.html
@@ -3,66 +3,60 @@
 @import helper._
 @import bootstrap3._
 
-<style>
-.form-group {
-    width: 750px;
-    padding-bottom: 60px;
-}
-</style>
 
 @Main(title) {
+
+<h2>Create a Team</h2>
+<hr>
+</br>
+    @form(routes.Teams.addTeam(), 'class -> "form-horizontal") {
     
-    <h2>Create A Team</h2>
-    <hr>
-    </br>
-    @form(routes.Teams.postTeam(), 'class -> "form-horzontal") {
-        
-        
+    
         @bootstrap3.text(teamForm("teamName"),
-            label = "Team Name", 
-            placeholder = "",
+            label = "Team Name",
+            placeholder = "The name of the team",
             help = "")
-        
-        @bootstrap3.text(teamForm("location"),
+            
+       @bootstrap3.text(teamForm("location"),
             label = "Location",
-            placeholder = "McCully Gym",
+            placeholder = "The location of the team",
             help = "")
-        
-        @bootstrap3.radiobuttons(teamForm("gender"),
-            label = "Gender",
-            buttonNameList = models.teams.Team.getTypes(),
-            help = "")
-        
-        @bootstrap3.checkboxes(teamForm("days"),
-            label = "Scheduled Day(s)",
-            checkboxMap = models.teams.Team.getMapDays(),
-            help = "")
-        
-        @bootstrap3.text(teamForm("sklLvl"),
+       
+       @bootstrap3.radiobuttons(teamForm("teamType"), 
+              label = "Type",
+              buttonNameList = models.teams.Team.typeOfTeam(),
+              help = "")
+              
+        @bootstrap3.text(teamForm("skillLevel"),
             label = "Skill Level (optional)",
-            placeholder = "",
+            placeholder = "The skill level of the team",
             help = "")
+       
+       @bootstrap3.textarea(teamForm("roster"),
+              rows = "6",
+              label = "Roster",
+              placeholder = "Who is on your team?",
+              help = "Please separate players with a comma.")
             
-         @bootstrap3.textarea(teamForm("roster"),
-            rows = "6",
-            label = "Roster",
-            placeholder = "",
-            help = "Who is on the team? Please separate names with a comma.")
+       @bootstrap3.textarea(teamForm("description"),
+              rows = "6",
+              label = "Description (optional)",
+              placeholder = "About this team.",
+              help = "")
             
-         @bootstrap3.textarea(teamForm("description"),
-            rows = "6",
-            label = "Team Description",
-            placeholder = "Describe your team.",
-            help = "")
-            
+    
+    
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <button id="submitButton" type="submit" class="btn btn-primary">
-                Create Team
+                Create
                 </button>
             </div>
-        </div>
-   
+        </div>    
     }
     
+
+
+
+
 }
