--- a/app/views/Main.scala.html
+++ b/app/views/Main.scala.html
@@ -21,7 +21,7 @@
                             <!--  Display three horizontal lines when navbar collapsed. -->
                             <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">HiHoopsNetwork</a>
+                        <a class="navbar-brand" href="@routes.Application.home()">HiHoopsNetwork</a>
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
