--- a/app/views/courts/CourtList.scala.html
+++ b/app/views/courts/CourtList.scala.html
@@ -7,8 +7,104 @@
 }
 
 @Main(title, scripts) {
-                <div id="map-canvas"></div>
-                @for(court <- courts){
-                   <h1>@court.getName()</h1>
+
+    <!-- Sorting Dropdown -->
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="pull-right">
+                Sort By
+                <select id="order-ctrl" size="1">
+                    <option value="alt">Alphabetical</option>
+                    <option value="absdate">Ranking</option>
+                    <option value="date">Most Recent</option>
+                    <option value="r">Popularity</option>
+                </select>
+            </div>
+        </div>
+    </div>
+
+    <!-- Gym Form -->
+    <div class="row">
+        <div class="col-sm-12">
+            <a href="GymForm.html" class="btn-sm btn-primary pull-right active" role="button">Create Gym</a>
+        </div>
+    </div>
+
+
+    <!-- Tab Navigation -->
+    <ul class="nav nav-tabs" data-tabs="tabs">
+        <li class="active"><a href="#map" data-toggle="tab">Map</a></li>
+        <li><a href="#list" data-toggle="tab">List</a></li>
+
+    </ul>
+
+    <!-- Tab Content -->
+    <div id="myTabContent" class="tab-content">
+
+        <!-- Map -->
+        <div id="map" class="tab-pane fade in active">
+            <div class="row">
+                <div class="col-md-12">
+                    <div id="map-canvas"></div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <!-- List -->
+        <div id="list" class="tab-pane fade">
+            <div id="visible-large" class="hidden-xs">
+
+                @for((court, index) <- courts.zipWithIndex){
+
+                    @if(index % 3 == 0) {
+                        <div class="row">
+                    }
+
+                        <div class="col-sm-4">
+                            <div class="thumbnail" href="">
+                                <img src="http://www.to-hawaii.com/oahu/beaches/images/kuliououbeach/basketball_court.jpg" alt="...">
+                                <div class="caption">
+                                    <h3>@court.getName()</h3>
+                                    <p>@court.getDescription()</p>
+                                    <p>
+                                        <a href="gyms/Gym1.html" class="btn btn-primary" role="button">View</a>
+                                        <a href="#" class="btn btn-default" role="button">Like</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                    @if(index % 3 == 2 || index == courts.size()){
+                        </div>
+                    }
                 }
+            </div>
+
+            <!-- List (phone)-->
+            <div id="visible-xs" class="visible-xs col-xs-12">
+                <div class="row">
+                    <table class="table table-striped table-hover">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Type</th>
+                            </tr>
+                        </thead>
+
+                        <tbody data-link="row" class="rowlink">
+                            @for(court <- courts) {
+                                <tr>
+                                    <td><a href="gyms/AinaHaina.html">@court.getName()</a></td>
+                                    <td>@court.getType()</td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+        </div>
+    </div>
 }
