Added login and registration form pages.

--- a/app/views/bootstrap3/registrationform.scala.html
+++ b/app/views/bootstrap3/registrationform.scala.html
@@ -8,9 +8,9 @@
 
 @(reverseRoute: play.api.mvc.Call, firstField: Field, lastField: Field, emailField: Field, passwordField: Field, confirmField: Field)
 
-<div class="row">
+<!--<div class="row">
   <div class="col-sm-4 col-sm-offset-4">
-
+-->
 <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title">Register</h3>
@@ -52,5 +52,5 @@
 
   </div>
 </div>
-</div>
-</div>
+<!--</div>
+</div> -->
