--- a/app/views/Index.scala.html
+++ b/app/views/Index.scala.html
@@ -1,4 +1,6 @@
-@(title: String)
+@(title: String, registrationForm: Form[forms.RegistrationForm])
+
+@import bootstrap3._
 
 @Main(title) {
     <div class="row" id="first">
@@ -18,8 +20,8 @@
 
                 </div>
                 <div class="col-sm-4 col-sm-offset-1">
-
-                    <div class="panel panel-default">
+                    @registrationform(routes.Users.postRegister(), registrationForm("first"), registrationForm("last"), registrationForm("email"),registrationForm("password"), registrationForm("confirmPassword"))
+<!--                    <div class="panel panel-default">
                         <div class="panel-heading">
                             <h3 class="panel-title">Register</h3>
                         </div>
@@ -50,7 +52,7 @@
                                 <p class="help-block">By clicking "Register", you agree to our <a href="TermsOfUse.html">terms of service</a></p>
                             </fieldset>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
@@ -60,7 +62,7 @@
     <div class="row colorblock-center-inverse" id="second">
         <div class="container">
             <div class="col-sm-12">
-                <h1>For players of all levels.</h2>
+                <h1>For players of all levels.</h1>
                     <p class="lead">The HIHoops site is designed to make it easy for players to connect
                         with players of a similar skill level, location, and even gender.
                         <a href="GamesPublic.html" class="btn btn-primary btn-sm">Find Games</a> near your area.</p>
@@ -74,7 +76,7 @@
     <div class="row" id="first">
         <div class="container">
             <div class="col-sm-12 wood-background">
-                <h1>Find gyms & courts</h2>
+                <h1>Find gyms & courts</h1>
                     <p class="lead">Looking for a court to play at? Our gyms page can locate gyms & courts near you!
                         <a href="gymPublic.html" class="btn btn-primary btn-sm">Find Gyms</a></p>
                     <img class="img-responsive" src="@routes.Assets.at("images/GymsMap")"/>
@@ -87,7 +89,7 @@
     <div class="row colorblock-center-inverse" id="second">
         <div class="container">
             <div class="col-sm-12">
-                <h1>Build your rep.</h2>
+                <h1>Build your rep.</h1>
                     <p class="lead">Find other b-ballers to play with and check their sportsmanship rating!
                         <a href="playerProfiles.html" class="btn btn-primary btn-sm">Search Players</a></p>
                     <img class="img-responsive" src="@routes.Assets.at("images/PlayerProfiles.png")"/>
@@ -100,7 +102,7 @@
     <div class="row" id="first">
         <div class="container">
             <div class="col-sm-12 wood-background">
-                <h1>Find teams to play in.</h2>
+                <h1>Find teams to play in.</h1>
                     <p class="lead">Search for teams to join based on skill level and position!
                         <a href="TeamsPublic.html" class="btn btn-primary btn-sm">Search Teams</a></p>
                     <img class="img-responsive" src="@routes.Assets.at("images/Teams.png")"/>
@@ -113,7 +115,7 @@
     <div class="row colorblock-center-inverse" id="second">
         <div class="container">
             <div class="col-sm-12">
-                <h1>Find, create, and manage leagues</h2>
+                <h1>Find, create, and manage leagues</h1>
                     <p class="lead">Advertise, create, and manage your league! Or search for leagues that your team can play in!
                         <a href="LeaguesListPublic.html" class="btn btn-primary btn-sm">Search Leagues</a></p>
                     <img class="img-responsive" src="@routes.Assets.at("images/Leagues.png")"/>
@@ -127,7 +129,7 @@
                 <img src="@routes.Assets.at("images/Glidecontent_UH12.png")" width="245" height="224" alt="245x230" vspace="22px">
             </div>
             <div class="col-sm-8 wood-background">
-                <h1>Created by students at the University of Hawaii for local players.</h2>
+                <h1>Created by students at the University of Hawaii for local players.</h1>
                     <p class="lead">Hawaii Hoops Network isn't one of those mainland websites that tries to cater to
                         basketball players on the islands. Hawaii Hoops Network was created by a group of local students who have a passion
                         for amateur basketball.</p>
