--- a/app/views/Main.scala.html
+++ b/app/views/Main.scala.html
@@ -22,7 +22,7 @@
                             <!--  Display three horizontal lines when navbar collapsed. -->
                             <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">HiHoopsNetwork</a>
+                        <a class="navbar-brand" href="@routes.Application.index()">HiHoopsNetwork</a>
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
@@ -42,8 +42,7 @@
                             
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a data-toggle="modal" href="#login">Login</a></li>
-                            <li><a href="#"></a></li>
+                            <li><a data-toggle="modal" href="@routes.Users.login()">Login</a></li>
                         </ul>
                     </div>
                 </div>
