--- a/app/views/courts/CreateCourt.scala.html
+++ b/app/views/courts/CreateCourt.scala.html
@@ -1,6 +1,6 @@
-@(title: String, court: Court)
+@(title: String, court: Court, isLoggedIn: Boolean)
 
 
-@Main(title) {
+@Main(title, isLoggedIn) {
 
 }
