--- a/app/views/footer/AboutUs.scala.html
+++ b/app/views/footer/AboutUs.scala.html
@@ -1,6 +1,6 @@
-@(title: String) 
+@(title: String, isLoggedIn: Boolean) 
 
-@Main(title) {
+@Main(title, isLoggedIn) {
 <h2>About Us</h2>
   <p>Created by students at the University of Hawaii for local players.</p>
   
