--- a/app/views/footer/MessageSent.scala.html
+++ b/app/views/footer/MessageSent.scala.html
@@ -1,4 +1,6 @@
-@(title: String) @Main(title) {
+@(title: String, isLoggedIn: Boolean) 
+
+@Main(title, isLoggedIn) {
 
 <style type="text/css">
         .content {
