--- a/app/views/player/PlayerProfile.scala.html
+++ b/app/views/player/PlayerProfile.scala.html
@@ -1,6 +1,6 @@
-@(title: String, player: Player) 
+@(title: String, player: Player, isLoggedIn: Boolean) 
 
-@Main(title) { 
+@Main(title, isLoggedIn) { 
  
 <div class="container">
   <div class="row">
