--- a/app/views/Home.scala.html
+++ b/app/views/Home.scala.html
@@ -1,6 +1,6 @@
-@(title: String, games: List[models.games.Game])
+@(title: String, games: List[models.games.Game], isLoggedIn: Boolean)
 
-@Main(title) {
+@Main(title, isLoggedIn) {
 <div class="container">
     <div class="row">
         <div class="col-md-3">
