--- a/app/views/Main.scala.html
+++ b/app/views/Main.scala.html
@@ -1,4 +1,4 @@
-@(title: String, scripts: Html = Html(""))(content: Html)
+@(title: String, isLoggedIn: Boolean, scripts: Html = Html(""))(content: Html)
 
 <!DOCTYPE html>
 
@@ -22,36 +22,29 @@
                             <!--  Display three horizontal lines when navbar collapsed. -->
                             <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
                         </button>
-<<<<<<< HEAD
-                        <a class="navbar-brand" href="@routes.Application.home()">HiHoopsNetwork</a>
-=======
-                        <a class="navbar-brand" href="@routes.Application.index()">HiHoopsNetwork</a>
->>>>>>> gyms
+                        @if(isLoggedIn) {
+                            <a class="navbar-brand" href="@routes.Application.home()">HiHoopsNetwork</a>
+                        } else {
+                            <a class="navbar-brand" href="#">HiHoopsNetwork</a>
+                        }
+                        
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
-                            
-<<<<<<< HEAD
-                            <li><a href="#">Gyms</a></li>
-                            <li><a href="@routes.Games.allGames()">Games</a></li>
-=======
+                        @if(isLoggedIn) {
                             <li><a id="courts" href="@routes.Courts.index()">Gyms</a></li>
-                            <li><a href="#">Games</a></li>
->>>>>>> gyms
+                            <li><a id="games" href="@routes.Games.allGames()">Games</a></li>
                             <li><a href="#">Leagues</a></li>
                             <li><a href="#">Teams</a></li>
-                            
-                            <!-- When these pages become available, release (be sure to add at symbol)
-                            <li><a id="gyms" href="routes.Application.gyms()">Gyms</a></li>
-                            <li><a id="games" href="routes.Application.games()">Games</a></li>
-                            <li><a id="leagues" href="routes.Application.leagues()">Leagues</a></li>
-                            <li><a id="teams" href="routes.Application.teams()">Teams</a></li>-->
-                            
                             <li><a id="players" href="@routes.Players.players("name asc", 0)">PlayerList</a></li>
-                            
+                        }
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
+                        @if(isLoggedIn) {
+                            <li><a data-toggle="modal" href="@routes.Users.logout()">Logout</a></li>
+                        } else {
                             <li><a data-toggle="modal" href="@routes.Users.login()">Login</a></li>
+                        }
                         </ul>
                     </div>
                 </div>
