--- a/app/views/courts/ShowCourt.scala.html
+++ b/app/views/courts/ShowCourt.scala.html
@@ -1,7 +1,7 @@
-@(title: String, court: Court)
+@(title: String, court: Court, isLoggedIn: Boolean)
 
 
-@Main(title) {
+@Main(title, isLoggedIn) {
     <div class="visible-xs">
         <button type="button" class="btn btn-primary btn-lg btn-block">Join</button>
         <hr>
