--- a/app/views/user/Login.scala.html
+++ b/app/views/user/Login.scala.html
@@ -1,7 +1,7 @@
-@(title: String, loginForm: Form[forms.LoginForm])
+@(title: String, loginForm: Form[forms.LoginForm], isLoggedIn: Boolean)
 
 @import bootstrap3._
 
-@Main(title) {
+@Main(title, isLoggedIn) {
     @loginform(routes.Users.postLogin(), loginForm("email"), loginForm("password"))
 }
