--- a/app/views/Index.scala.html
+++ b/app/views/Index.scala.html
@@ -2,144 +2,130 @@
 
 @import bootstrap3._
 
-@Main(title) {
-    <div class="row" id="first">
+
+@scripts = {
+    <link rel="stylesheet" href="@routes.Assets.at("stylesheets/index.css")">
+}
+
+@Main(title, scripts) {
+
+    <!-- First Row -->
+    <div class="row odd">
         <div class="container">
-
-            <div class="row">
-                <div class="col-sm-7">
-
-                    <div class="wood-background">
-                        <h1>Connecting basketball players, teams, and leagues on Oahu.</h1>
-                        <div><span class="glyphicon glyphicon-lg glyphicon-pencil"></span> <strong>Register for leagues.</strong></div>
-                        <div><span class="glyphicon glyphicon-lg glyphicon-globe"></span> <strong>View open gym hours.</strong></div>
-                        <div><span class="glyphicon glyphicon-lg glyphicon-play"></span> <strong>Start pickup games.</strong></div>
-                        <div><span class="glyphicon glyphicon-lg glyphicon-user"></span> <strong>Socialize with other players and teams.</strong></div>
-                    </div>
-
-
-                </div>
-                <div class="col-sm-4 col-sm-offset-1">
-                    @registrationform(routes.Users.postRegister(), registrationForm("first"), registrationForm("last"), registrationForm("email"),registrationForm("password"), registrationForm("confirmPassword"))
-<!--                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Register</h3>
-                        </div>
-                        <div class="panel-body">
-                            <fieldset>
-                                <div class="form-group" >
-                                    <div class="row">
-                                        <div class="col-sm-6">
-                                            <input id="" name="" value="" class="form-control" placeholder="First Name" type="text">
-                                        </div>
-
-                                        <div class="col-sm-6">
-                                            <input id="" name="" value="" class="form-control" placeholder="Last Name" type="text">
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="form-group" >
-                                    <input id="" name="" value="" class="form-control" placeholder="E-mail" type="text">
-                                </div>
-                                <div class="form-group" >
-                                    <input id="" name="" value="" class="form-control" placeholder="Password" type="password">
-                                </div>
-                                <div class="form-group" >
-                                    <input id="" name="" value="" class="form-control" placeholder="Password" type="password">
-                                </div>
-                                <input id="submitRegister" class="btn btn btn-primary btn-block" type="submit" value="Register">
-                                <p class="help-block">By clicking "Register", you agree to our <a href="TermsOfUse.html">terms of service</a></p>
-                            </fieldset>
-                        </div>
-                    </div> -->
+            <!-- Header -->
+            <div class="col-sm-7" id="large">
+                <h1>Connecting basketball players, teams, and leagues on Oahu.</h1>
+                <div>
+                    <div><span class="glyphicon glyphicon-lg glyphicon-pencil"></span> <strong>Register for leagues.</strong></div>
+                    <div><span class="glyphicon glyphicon-lg glyphicon-globe"></span> <strong>View open gym hours.</strong></div>
+                    <div><span class="glyphicon glyphicon-lg glyphicon-play"></span> <strong>Start pickup games.</strong></div>
+                    <div><span class="glyphicon glyphicon-lg glyphicon-user"></span> <strong>Socialize with other players and teams.</strong></div>
                 </div>
             </div>
 
+            <!-- Registration Form -->
+            <div class="col-sm-4 col-sm-offset-1">
+                @registrationform(routes.Users.postRegister(), registrationForm("first"), registrationForm("last"), registrationForm("email"),registrationForm("password"), registrationForm("confirmPassword"))
+            </div>
         </div>
     </div>
 
-    <div class="row colorblock-center-inverse" id="second">
+    <!-- Second Row -->
+    <div class="row even">
         <div class="container">
             <div class="col-sm-12">
-                <h1>For players of all levels.</h1>
-                    <p class="lead">The HIHoops site is designed to make it easy for players to connect
-                        with players of a similar skill level, location, and even gender.
-                        <a href="GamesPublic.html" class="btn btn-primary btn-sm">Find Games</a> near your area.</p>
-                    <img class="img-responsive" src="@routes.Assets.at("images/players.png")"/>
+                <h2>For players of all levels.</h2>
+                <p class="lead">
+                    The HIHoops site is designed to make it easy for players to connect
+                    with players of a similar skill level, location, and even gender.
+                    <a href="GamesPublic.html" class="btn btn-primary btn-sm">Find Games</a> near your area.
+                </p>
+                <img class="img-responsive" src="@routes.Assets.at("images/players.png")"/>
             </div>
         </div>
     </div>
 
 
-
-    <div class="row" id="first">
+    <!-- Third Row -->
+    <div class="row odd">
         <div class="container">
             <div class="col-sm-12 wood-background">
                 <h1>Find gyms & courts</h1>
-                    <p class="lead">Looking for a court to play at? Our gyms page can locate gyms & courts near you!
-                        <a href="gymPublic.html" class="btn btn-primary btn-sm">Find Gyms</a></p>
-                    <img class="img-responsive" src="@routes.Assets.at("images/GymsMap")"/>
+                <p class="lead">
+                    Looking for a court to play at? Our gyms page can locate gyms & courts near you!
+                    <a href="gymPublic.html" class="btn btn-primary btn-sm">Find Gyms</a>
+                </p>
+                <img class="img-responsive" src="@routes.Assets.at("images/GymsMap")"/>
             </div>
         </div>
     </div>
 
-
-
-    <div class="row colorblock-center-inverse" id="second">
+    <!-- Fourth Row -->
+    <div class="row even">
         <div class="container">
             <div class="col-sm-12">
                 <h1>Build your rep.</h1>
-                    <p class="lead">Find other b-ballers to play with and check their sportsmanship rating!
-                        <a href="playerProfiles.html" class="btn btn-primary btn-sm">Search Players</a></p>
-                    <img class="img-responsive" src="@routes.Assets.at("images/PlayerProfiles.png")"/>
+                <p class="lead">
+                    Find other b-ballers to play with and check their sportsmanship rating!
+                    <a href="playerProfiles.html" class="btn btn-primary btn-sm">Search Players</a>
+                </p>
+                <img class="img-responsive" src="@routes.Assets.at("images/PlayerProfiles.png")"/>
             </div>
         </div>
     </div>
 
 
-
-    <div class="row" id="first">
+    <!-- Fifth Row -->
+    <div class="row odd">
         <div class="container">
-            <div class="col-sm-12 wood-background">
+            <div class="col-sm-12">
                 <h1>Find teams to play in.</h1>
-                    <p class="lead">Search for teams to join based on skill level and position!
-                        <a href="TeamsPublic.html" class="btn btn-primary btn-sm">Search Teams</a></p>
-                    <img class="img-responsive" src="@routes.Assets.at("images/Teams.png")"/>
+                <p class="lead">
+                    Search for teams to join based on skill level and position!
+                    <a href="TeamsPublic.html" class="btn btn-primary btn-sm">Search Teams</a>
+                </p>
+                <img class="img-responsive" src="@routes.Assets.at("images/Teams.png")"/>
             </div>
         </div>
     </div>
 
 
-
-    <div class="row colorblock-center-inverse" id="second">
+    <!-- Sixth Row -->
+    <div class="row even">
         <div class="container">
             <div class="col-sm-12">
                 <h1>Find, create, and manage leagues</h1>
-                    <p class="lead">Advertise, create, and manage your league! Or search for leagues that your team can play in!
-                        <a href="LeaguesListPublic.html" class="btn btn-primary btn-sm">Search Leagues</a></p>
-                    <img class="img-responsive" src="@routes.Assets.at("images/Leagues.png")"/>
+                <p class="lead">
+                    Advertise, create, and manage your league! Or search for leagues that your team can play in!
+                    <a href="LeaguesListPublic.html" class="btn btn-primary btn-sm">Search Leagues</a>
+                </p>
+                <img class="img-responsive" src="@routes.Assets.at("images/Leagues.png")"/>
             </div>
         </div>
     </div>
 
-    <div class="row" id="first">
+    <!-- Seventh Row -->
+    <div class="row odd">
         <div class="container">
+            <!-- UH logo -->
             <div class="col-md-4">
                 <img src="@routes.Assets.at("images/Glidecontent_UH12.png")" width="245" height="224" alt="245x230" vspace="22px">
             </div>
-            <div class="col-sm-8 wood-background">
+
+            <div class="col-sm-8">
                 <h1>Created by students at the University of Hawaii for local players.</h1>
-                    <p class="lead">Hawaii Hoops Network isn't one of those mainland websites that tries to cater to
-                        basketball players on the islands. Hawaii Hoops Network was created by a group of local students who have a passion
-                        for amateur basketball.</p>
-                    <a href="#" class="btn btn-primary btn">Learn More About Us</a>
+                <p class="lead">
+                    Hawaii Hoops Network isn't one of those mainland websites that tries to cater to
+                    basketball players on the islands. Hawaii Hoops Network was created by a group of local students who have a passion
+                    for amateur basketball.
+                </p>
+                <a href="#" class="btn btn-primary btn">Learn More About Us</a>
             </div>
-
-
         </div>
     </div>
+
     <br/>
 
+    <!-- Register Button -->
     <div align="center"><a class="btn btn-primary btn-xlg" href="#">Ready to register?</a></div>
 }
