--- a/app/views/Main.scala.html
+++ b/app/views/Main.scala.html
@@ -9,12 +9,13 @@
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.0.0/united/bootstrap.min.css">
 
         <!--  Load site-specific customizations after bootstrap. -->
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/basketball.jpg")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         @scripts
     </head>
+
     <body>
-        <div class="container">
+        <!--<div class="container">-->
             <div class="navbar navbar-inverse" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
@@ -48,7 +49,7 @@
                 </div>
             </div>
             @content
-        </div>
+        <!--</div> -->
      <hr>
      <div id = "footer">
       <div class="container">
