--- a/app/views/courts/ShowCourt.scala.html
+++ b/app/views/courts/ShowCourt.scala.html
@@ -2,6 +2,7 @@
 
 
 @Main(title) {
+    <div class="container">
     <div class="visible-xs">
         <button type="button" class="btn btn-primary btn-lg btn-block">Join</button>
         <hr>
@@ -51,5 +52,6 @@
                 </ul>
             </div>
         </div>
+    </div>
     </div>
 }
