--- a/app/views/Main.scala.html
+++ b/app/views/Main.scala.html
@@ -36,7 +36,7 @@
                             <li><a href="#">Gyms</a></li>
                             <li><a href="#">Games</a></li>
                             <li><a href="#">Leagues</a></li>
-                            <li><a href="@routes.Teams.allTeams()">Teams</a></li>
+                            <li><a href="@routes.Teams.allTeams(0)">Teams</a></li>
                             <li><a href="#">Player Profiles</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
