--- a/app/views/teams/AllTeams.scala.html
+++ b/app/views/teams/AllTeams.scala.html
@@ -1,7 +1,27 @@
-@(title: String, currentPage: com.avaje.ebean.Page[models.teams.Team])
+@(title: String, currentPage: com.avaje.ebean.Page[models.teams.Team], sort: String)
 
 @Main(title) {
-    <a href="@routes.Teams.createTeam()" class="btn btn-primary btn-md active" role="button">Create</a>
+    
+    <div class="row-search hidden-xs">
+    <div class="col-md-4">
+          
+    </div>
+    
+    <div class="btn-group">
+      <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+        Sort By<span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu" role="menu">
+        <li><a href="@routes.Teams.allTeams("location asc", 0)">Location</a></li>
+        <li><a href="@routes.Teams.allTeams("teamType asc", 0)">Type</a></li>
+        <hr>
+        <li><a href="@routes.Teams.allTeams("teamName asc", 0)">All</a>
+      </ul>
+    </div>
+    
+    <a href="@routes.Teams.createTeam()" class="btn btn-primary btn-md pull-right" role="button">Create a Team</a> </br>
+    
+    </div>
     <table class="table table-striped table-hover">
       <thead>
          <tr>
@@ -29,7 +49,7 @@
           <ul class="pagination">
             @if(currentPage.hasPrev) {
                 <li class="prev">
-                <a href="@routes.Teams.allTeams(currentPage.getPageIndex-1)">&laquo;</a>
+                <a href="@routes.Teams.allTeams(sort, currentPage.getPageIndex-1)">&laquo;</a>
                 </li>
             } else {
                 <li class="prev disabled">
@@ -39,13 +59,13 @@
             @for(index <- 0 until currentPage.getTotalPageCount()) {
                 <li class="current">
                 
-                  <a href="@routes.Teams.allTeams(index)">@(index+1)</a>
+                  <a href="@routes.Teams.allTeams(sort, index)">@(index+1)</a>
                 
                 </li>
             }
             @if(currentPage.hasNext) {
                 <li class="next">
-                  <a href="@routes.Teams.allTeams(currentPage.getPageIndex+1)">&raquo;</a>
+                  <a href="@routes.Teams.allTeams(sort, currentPage.getPageIndex+1)">&raquo;</a>
                 </li>
             } else {
                 <li class="next disabled">
